# ReForge

./: .gitignore  README.md  analysis_pipline.md  project.md  project_context.md  pyproject.toml
.agents/: architecture.md  development_log.md
docs/: agents.md  analysis_pipline.md  architecture.md  database.md  heritage_score.md
reports/: architecture_report.json  evolution_report.json  heritage_report.json  repository_profile.json  summary.md  validation_report.json
reports/click/: architecture_report.json  evolution_report.json  heritage_report.json  repository_profile.json  restoration_plan.json  summary.md  validation_report.json
scripts/: excavate.py
src/reforge/: __init__.py
src/reforge/adapters/: __init__.py  code_analyzer.py  code_validator.py  git_cloner.py  github_provider.py  repositories.py  restoration_executor.py  workspace_inspector.py
src/reforge/domain/: __init__.py  interfaces.py  models.py
src/reforge/infrastructure/: __init__.py  web.py
src/reforge/usecases/: __init__.py  architect.py  evolution_planner.py  explorer.py  heritage.py  restoration_planner.py  restorer.py  scout.py  supervisor.py  validation_agent.py
tests/: test_architect.py  test_cli.py  test_cli_history_diff_benchmark.py  test_code_analyzer.py  test_domain_models.py  test_evolution_planner.py  test_explorer.py  test_github_provider.py  test_heritage.py  test_history_persistence.py  test_repositories.py  test_restoration_planner.py  test_restorer.py  test_scout.py  test_supervisor.py  test_validation_agent.py  test_web.py  test_workspace_inspector.py
(+10 files in other folders)
