[project]
name = "reforge"
version = "0.1.0"
description = "AI-powered software archaeology workspace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ReForge Contributors" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.8",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
